product things done

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mystore",
   "version": "0.1.0",
-  "type" :"module",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "better-sqlite3": "^11.8.1",
     "next": "15.2.1",
     "react": "^19.0.0",
